--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,17 @@
 bot:
   name: "policlinica"
   token: 6598381852:AAEzH2NcFBGZJ1Dkg7dKbPM3jawMBU-tBTk
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/policlinica
+    username: postgress
+    password: postgresspass
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
