--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,10 @@ repositories {
 dependencies {
     implementation 'org.telegram:telegrambots:6.9.7.1'
     implementation 'org.postgresql:postgresql:42.6.0'
+    implementation 'org.flywaydb:flyway-core:9.21.0'
     implementation 'org.json:json:20231013'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
