--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,14 +4,15 @@ bot:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/policlinica
+    url: jdbc:postgresql://localhost:5414/policlinica
     username: postgress
     password: postgresspass
     driver-class-name: org.postgresql.Driver
   jpa:
-    hibernate:
-      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+  flyway:
+    enabled: true
