--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,15 @@ plugins {
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
+
+jar {
+    enabled = false
+}
+
+bootJar {
+    archiveFileName = 'app.jar'
+}
+
 java {
     sourceCompatibility = '17'
 }
