--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 bot:
   name: "policlinica"
-  token: {token}
+  token: ${TG_BOT_TOKEN}
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5414/policlinica
-    username: postgress
-    password: postgresspass
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
